add validation for review, must add star rating, prevent user from creating multiple reviews of the same gift

--- a/app/views/reviews/_review_item.html.erb
+++ b/app/views/reviews/_review_item.html.erb
@@ -1,4 +1,5 @@
 <%= content_tag :div, class: "review_item" do %>
+  <%= tag.h2 link_to "#{review.gift.name}", gift_path(review.gift) %>
   <strong><%= review.user.username %></strong> on <%= formatted_updated_at review %> <br>
   <p class="rating">Rating: <%= review.display_rating %></p> <br><br>
   <p> Review: <%= review.comment %> </p>
