--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -419,6 +419,10 @@ ul.nav li:first-child {
   padding: 1em;
 }
 
+.review_item h2 {
+  margin-top: .5em;
+}
+
 .big_btn {
   display: block;
   width: 97%;
@@ -453,6 +457,10 @@ ul.nav li:first-child {
 
 p.rating {
   content: "\f005";
+}
+
+.new_review .field_with_errors {
+  display: inline-block;
 }
 
 .edit_review .md_delete_btn {
