--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -183,6 +183,11 @@ ul.nav li:first-child {
   width: 100%;
 }
 
+.main img {
+  max-height: 160px;
+  max-width: 160px;
+}
+
 .big_box {
   border: 1px solid #0F2041;
   border-radius: 5px;
@@ -201,7 +206,7 @@ ul.nav li:first-child {
   color: red;
 }
 
-.field_with_errors input {
+div.field_with_errors input {
   box-shadow: 0 0 6px red;
 }
 
@@ -408,6 +413,44 @@ ul.nav li:first-child {
   background: #f99090;
   color: #FFF
 }
+
+.new_gift_form.form {
+  padding: 2em;
+  margin: 2em 16em;
+}
+
+.new_gift_form label {
+  display: inline-block;
+  width: 100%;
+  padding: 5px 0;
+  font-weight: bold;
+}
+
+.new_gift_form input {
+  border: 1px solid #888888;
+  box-shadow: 1px 1px 1px #888;
+  width: 300px;
+  height: 30px;
+  border-radius: 4px;
+  padding: 5px;
+  text-align: left;
+  margin: 0 10px;
+  font-size: 14px;
+}
+
+input.new_gift_btn {
+  width: 100%;
+  height: 3em;
+  text-align: center;
+  margin: 20px 0;
+  background: #36f;
+  color: #fff;
+}
+
+.new_gift_form p {
+  color: red;
+  text-align: center;
+}
 /**** reviews  ****/
 
 .review_item {
@@ -463,7 +506,7 @@ p.rating {
   display: inline-block;
 }
 
-.edit_review .md_delete_btn {
+.md_delete_btn {
   border: 1px solid #0F2041;
   border-radius: 5px;
   background: #0F2041;
@@ -543,7 +586,7 @@ p.rating {
 }
 
 .login .field input {
-  border: 1px solid black;
+  border: 1px solid #888888;
   width: 150px;
   border-radius: 2px;
   padding: 5px;
