--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -3,7 +3,11 @@
 body {
   margin: 0;
   padding: 0;
-  background: #F7F7F7;
+  background: url(gift_bg_blue.jpg);
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-attachment: fixed;
+  background-position: right;
 }
 
 a {
