--- a/app/views/devise/shared/_links.html.erb
+++ b/app/views/devise/shared/_links.html.erb
@@ -19,7 +19,7 @@
 <% end -%>
 
 <%- if devise_mapping.omniauthable? %>
-  <%= tag.div class:"social_button fbutton" do %>
+  <%= tag.div class:"omni_button fbutton" do %>
     <%- resource_class.omniauth_providers.each do |provider| %>
       <%= link_to "Sign in with #{OmniAuth::Utils.camelize(provider)}", omniauth_authorize_path(resource_name, provider) %><br />
     <% end %>
