added gift column created by that is assigned a user id if a gift is created by a user, edit buttons allow a user to edit the gift if they made it.

--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -518,6 +518,15 @@ p.rating {
   display: inline-block;
 }
 
+.gift_info {
+  min-width: 500px;
+}
+
+.buttons_box {
+  display: flex;
+  justify-content: flex-end;
+}
+
 .md_delete_btn {
   border: 1px solid #0F2041;
   border-radius: 5px;
