--- a/app/views/gifts/edit.html.erb
+++ b/app/views/gifts/edit.html.erb
@@ -1,2 +1,3 @@
-<h1>Gifts#edit</h1>
-<p>Find me in app/views/gifts/edit.html.erb</p>
+<%= tag.h1 "Edit #{@gift.name}" %>
+
+<%= render partial: 'form', locals: {gift:@gift} %>
