--- a/app/views/gifts/_gift_list.html.erb
+++ b/app/views/gifts/_gift_list.html.erb
@@ -3,6 +3,6 @@
   <% gifts.each do |gift| %>
     <li><%= link_to (image_tag gift.image), gift_path(gift) %>
         <h4><%= link_to shorten_name(gift.name), gift_path(gift) %></h4>
-        <p><%= render partial: 'gifts/add_to_wishlist', locals: {gift: gift} %><p></li>
+        <p><%= add_a_wishlist_button(gift, "card") %><p></li>
   <% end %>
 <% end %>
