--- a/app/views/gifts/_aws_search.html.erb
+++ b/app/views/gifts/_aws_search.html.erb
@@ -5,18 +5,9 @@
         <% new_gift = Gift.new_gift_from_amazon(item) %>
         <%= image_tag new_gift.image %> <br>
         <%= link_to shorten_name(new_gift.name), new_gift.url, target: "_blank" %>
-        <%= link_to_if new_gift.price != nil, number_to_currency(new_gift.price), new_gift.url, target: "_blank" %><br>
-        <% new_gift.categories.build(name: item["ItemAttributes"]["Binding"]) %>
-        <br><br>
-        <% if new_gift.persisted? && current_user && current_user.gifts.include?(new_gift) %>
-          <%= button_to "On Your Wishlist", list_path(current_user.list), method: 'get', class: 'card_button_added' %>
-        <% elsif new_gift.persisted? %>
-        <%= form_for new_gift, url: gifts_wishlist_path(new_gift), html: {method: "patch"} do |g| %>
-          <%= g.submit "Add to Wishlist", class:'card_button' %>
-          <% end %>
-        <% end %>
+        <%= link_to_if new_gift.price != nil, number_to_currency(new_gift.price), new_gift.url, target: "_blank" %>
+        <%= add_a_wishlist_button(new_gift, "card")%>
 
-<% #add to wishlist button %>
       <% unless new_gift.persisted? %>
         <%= form_for new_gift, url: gifts_path, html: {method: "post"} do |g|%>
           <%= g.hidden_field :name %>
