--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -176,6 +176,21 @@ ul.nav li:first-child {
   font-family: helvetica;
 }
 
+.welcome_back h1 {
+  margin-bottom: 0
+}
+
+.welcome_btn {
+  width: 200px;
+  background: #3366ff;
+  color: white;
+  padding: 0.5rem;
+  margin: 0 10px;
+  border: none;
+  border-radius: 1rem;
+  font-size: 12px;
+}
+
 /**** main ****/
 
 .wrapper {
@@ -224,15 +239,14 @@ div.field_with_errors input {
 
 /**** wishlists ****/
 
-.wishlists {
+ul.wishlists {
   list-style: none;
   text-align: center;
   display: flex;
   font-size: 0;
 }
 
-.wishlists li img,
-.wishlists li a {
+.wishlists li img {
   display: block;
   color: black;
   margin: 2px auto;
