--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,13 +17,7 @@
 
     <div class="wrapper">
       <div class="main">
-        <% unless current_page?(new_user_session_path) %>
-          <% if flash[:notice] || flash[:alert] %>
-            <p class="notice"><%= notice %></p>
-            <p class="alert"><%= alert %></p>
-          <% end %>
-        <% end %>
-
+        <%= show_errors %>
         <%= yield %>
       </div>
     </div>
