--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -249,9 +249,6 @@ ul.wishlists {
   color: black;
   margin: 2px auto;
   font-size: 16px;
-}
-
-.wishlists li img {
   height: 50px;
   width: 50px;
   object-fit: cover;
@@ -599,9 +596,13 @@ p.rating {
   margin: .5em 1.5em;
 }
 
-.category_index ul {
-  padding: 0;
-  overflow: hidden;
+.category_index h3 {
+  margin: 1em 2.5em;
+}
+
+.category_index ul.wishlists {
+  display: flex;
+  margin: 0 50px;
 }
 
 .category_index a.see_more {
@@ -617,6 +618,7 @@ p.rating {
   text-align: center;
   font-family: arial;
 }
+
 
 /**** login ****/
 
