--- a/app/views/lists/show.html.erb
+++ b/app/views/lists/show.html.erb
@@ -37,7 +37,7 @@
   {{#each reviews}}
   <div class="gift-review">
     <strong>{{user.username}}</strong> on {{formatDate updated_at day="numeric" month="long" year="numeric"}} <br>
-    <p class="rating">Rating: {{stars}} </p> <br><br>
+    <p class="rating">Rating: {{{display_rating stars}}} </p> <br><br>
     <p> Review: {{comment}} </p>
     <br>
   </div>
