--- a/app/views/lists/show.html.erb
+++ b/app/views/lists/show.html.erb
@@ -7,10 +7,14 @@
   <% end %>
 
 <% @list.gifts.each do |gift| %>
-  <%= tag.div class:"gift_item" do %>
+  <%= tag.div id:"gift-#{gift.id}", class:"gift_item" do %>
       <% if gift.users.include?(current_user) %>
         <%= tag.div class:"x" do %>
-          <%= button_to "X", gifts_wishlist_path(gift), method: "delete", class:"delete_btn" %>
+        <form data-id="<%= gift.id %>" class="js-remove-btn" method="post" action="<%= gifts_wishlist_path(gift) %>">
+          <input type="hidden" name="_method" value="delete">
+          <input type="hidden" name="authenticity_token" value="<%= form_authenticity_token %>">
+          <input class="delete_btn" type="submit" value="X">
+        </form>
         <% end %>
       <% end %>
     <%= tag.div class:"item_box" do %>
