--- a/app/views/lists/show.html.erb
+++ b/app/views/lists/show.html.erb
@@ -1,9 +1,9 @@
 <%= tag.h1 "#{@list.user.username.capitalize}'s Wishlist" %>
 
-<%= tag.h2 "About #{@list.user.username.capitalize}'s Wishlist:" %>
+<%= tag.h2 "About #{@list.user.username.capitalize}'s Wishlist:", id:"about-wishlist" %>
   <%= tag.div class:"big_box wishlist_desc" do %>
-    <%= @list.description %><%= tag.br %>
-    <%= link_to "Edit", edit_list_path(@list) if current_user == @list.user %>
+    <p id="p-desc"><%= @list.description %></p><%= tag.br %>
+    <%= link_to "Edit", edit_list_path(@list), id:"js-edit-btn" if current_user == @list.user %>
   <% end %>
 
 <% @list.gifts.each do |gift| %>
