--- a/app/views/lists/_form.html.erb
+++ b/app/views/lists/_form.html.erb
@@ -2,6 +2,6 @@
   <%= form_for list do |l| %>
   <%= l.label "Tell us about your wishlist:" %><%= tag.br %>
   <%= l.text_area "description" %><%= tag.br %>
-  <%= l.submit id:"" %>
+  <%= l.submit %>
   <% end %>
 <% end %>
