--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -38,7 +38,7 @@ h1 {
   position: fixed;
   z-index: 100;
   font-family: arial;
-  background: #3366ff;
+  background: linear-gradient(#3366ff, #1d47c4);
   box-shadow: 0px 1px 3px #3366ff;
   margin: 0;
   padding: 0;
@@ -58,7 +58,6 @@ h1 {
 .logo h1,
 .logo h1 a {
   margin: 0;
-  margin-top: .25em;
   padding: 0;
   color: white;
 }
@@ -174,13 +173,17 @@ ul.nav li:first-child {
   font-family: helvetica;
 }
 
+.welcome_back {
+  width: 85%;
+}
+
 .welcome_back h1 {
   margin-bottom: 0
 }
 
 .welcome_btn {
   width: 200px;
-  background: #3366ff;
+  background: linear-gradient(#3366ff, #1d47c4);
   color: white;
   padding: 0.5rem;
   margin: 0 10px;
@@ -257,6 +260,7 @@ ul.wishlists {
 .edit_wishlist_desc,
 .wishlist_desc {
   overflow: hidden;
+  color: black;
 }
 
 .edit_wishlist_desc label {
@@ -344,7 +348,7 @@ ul.wishlists {
 
 .card_button, .card_button_added {
   width: 200px;
-  background: #3366ff;
+  background:linear-gradient(#3366ff, #1d47c4);
   color: white;
   padding: 0.5rem;
   border: none;
@@ -364,7 +368,7 @@ ul.wishlists {
 
 .item_button, .item_button_added {
   width: 200px;
-  background: #3366ff;
+  background:linear-gradient(#3366ff, #1d47c4);
   color: white;
   padding: 0.5rem;
   margin: 0 10px;
@@ -621,7 +625,7 @@ p.rating {
 }
 
 .category_index a.see_more {
-  background: #3366ff;
+  background:linear-gradient(#3366ff, #1d47c4);
   color: white;
   margin: 1em 2em 0;
   padding: 0.5rem;
@@ -698,7 +702,7 @@ p.rating {
 
 .login .actions input {
   width: 150px;
-  background: #3366ff;
+  background:linear-gradient(#3366ff, #1d47c4);
   color: white;
   padding: 0.5rem;
   border: none;
@@ -775,7 +779,7 @@ p.rating {
 
 .signup .actions input {
   width: 150px;
-  background: #3366ff;
+  background:linear-gradient(#3366ff, #1d47c4);
   color: white;
   padding: 0.5rem;
   border: none;
@@ -831,7 +835,7 @@ p.rating {
 .username_select .update_btn {
   width: 150px;
   margin: 1em;
-  background: #3366ff;
+  background:linear-gradient(#3366ff, #1d47c4);
   color: white;
   padding: 0.5rem;
   border: none;
