created constructor function and prototype function to apply the new gift to the handlbars template and display it on page

--- a/app/views/gifts/index.html.erb
+++ b/app/views/gifts/index.html.erb
@@ -13,3 +13,14 @@
   <%= tag.h1 "Browse Gifts:" %>
   <%= render partial: 'gifts/gift_list', locals: {gifts: @gifts} %>
 <% end %>
+
+<script id="gift-card-template" type="text/x-handlebars-template">
+  <li>
+    <a href="gifts/{{id}}"><img src="{{image}}"></a> <br>
+    <a target="_blank" href="gifts/{{id}}">{{name}}</a>
+    <a target="_blank" href="gifts/{{id}}">{{price}}</a>
+    <form class="button_to" method="get" action="/lists/{{id}}">
+      <input class="card_button_added" type="submit" value="On Your Wishlist">
+    </form>
+  </li>
+</script>
